.vitepress/theme/style.less
:root {
  --vp-c-brand-1: #D31334;
  --vp-c-brand-2: #e60000;
  --vp-c-brand-3: #ff5555;
  --vp-c-brand-soft: rgba(255, 0, 0, 0.15);
  --vp-nav-logo-height: 2rem;
  --docsearch-search-button-background: var(--vp-c-bg-alt);
  --docsearch-search-button-text-color: var(--vp-c-text-1);
  --vp-code-block-bg: var(--vp-c-bg);
  --vp-sidebar-bg-color: var(--vp-c-bg);
  --vp-code-line-number-color: var(--vp-c-gray-1);
  --vp-custom-block-info-bg: var(--vp-c-indigo-soft);
  --vp-custom-block-tip-bg: var(--vp-c-green-soft);
  --vp-custom-block-details-bg: var(--vp-c-purple-soft);
  --vp-sidebar-width: 20rem;
  --shiki-light: var(--vp-c-text-1);
}

::-webkit-scrollbar {
  display: none;
}

.vp-doc div[class*='language-'] {
  border: solid 1px var(--vp-c-gray-2);
  box-shadow: var(--vp-shadow-2);
}

.vp-doc p img {
  border: solid 1px var(--vp-c-divider);
  box-shadow: var(--vp-shadow-2);
}

.VPNavBar.has-sidebar .divider {
  padding-left: 0 !important;
}

.VPNavBarTitle.has-sidebar .title {
  border-bottom-color: transparent !important;
}

.VPDoc.has-sidebar {
  border-left: solid 1px var(--vp-c-divider);
}

@media (min-width: 960px) {
  .VPLocalNavOutlineDropdown {
    border-left: solid 1px var(--vp-c-divider);
  }
}

.VPSidebarItem.collapsible>.item {
  align-items: center;
}

.group section.VPSidebarItem.level-0 {
  padding-bottom: 1rem;
}

.group:has([role='button']) .VPSidebarItem.level-0 .items {
  padding-left: 1rem !important;
  border-left: 2px solid var(--vp-c-divider);
}

.VPSidebarItem.is-active .indicator {
  background-color: var(--vp-c-brand-1);
  left: -18px;
}

.VPSidebarItem.level-0 > .item h2.text {
  font-size: 1rem;
  line-height: 2;
  font-weight: 700;
  background: url("/images/icon-document.svg") left center no-repeat;
  background-size: 1rem;
  padding-left: 1.5rem;
}

.VPSidebarItem.level-1 > .item h3.text {
  font-weight: 600;
  color: var(--vp-c-text-1);
}

.VPDoc.has-aside .content .content-container {
  max-width: initial;
}

@media (min-width: 1440px) {
  #VPContent.VPContent.has-sidebar {
    padding-right: calc((100vw - var(--vp-layout-max-width)) / 3);
  }
}

.vp-doc .custom-block {
  padding: 1.5rem;
}

.vp-doc .custom-block p:first-child {
  position: relative;
  font-weight: 700;
}

.vp-doc .custom-block.tip p:first-child {
  color: var(--vp-c-green-1);

  &:before {
    background-color: var(--vp-c-green-1);
  }
}

.vp-doc .custom-block.info p:first-child {
  color: var(--vp-c-indigo-1);

  &:before {
    background-color: var(--vp-c-indigo-1);
  }
}

.vp-doc .custom-block.warning p:first-child {
  color: var(--vp-c-yellow-1);

  &:before {
    background-color: var(--vp-c-yellow-1);
  }
}

.vp-doc .custom-block.danger p:first-child {
  color: var(--vp-c-red-1);

  &:before {
    background-color: var(--vp-c-red-1);
  }
}

.vp-doc .custom-block p:first-child:before {
  position: absolute;
  left: -1.5rem;
  top: -4px;
  content: '';
  width: 6px;
  height: 2rem;
  background: #000;
}

.vp-doc .custom-block p:first-child {
  font-size: 1rem;
}

.nav .VPLink[href="/docs/coding-standard/index.html"] .text,
.nav a[href="/docs/coding-standard/index.html"] .text,
.nav .VPLink[href="/docs/developer/index.html"] .text,
.nav a[href="/docs/developer/index.html"] .text {
  font-size: 1rem;
  font-weight: 700;
  color: var(--vp-c-text-1);
  background: url("/images/icon-document.svg") left center no-repeat;
  background-size: 1rem;
  padding-left: 1.5rem;
  margin-top: 0.625rem;
}

.VPDocOutlineItem.root > li > .outline-link:first-child {
  font-weight: 550;
}

.mermaid-container .mermaid {
  width: 100%;
  height: auto;
  /*max-height: 650px;*/
}

